compilateur/y.output
Terminaux inutilisés dans la grammaire

    tCOM


Grammaire

    0 $accept: FichierC $end

    1 $@1: %empty

    2 FichierC: $@1 DeclarationsFunctions Main

    3 $@2: %empty

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body tRETURN tID tPV tAF

    5 Arguments: %empty

    6 $@3: %empty

    7 Arguments: tINT tID $@3 ArgNext

    8 ArgNext: %empty
    9        | tV tINT tID ArgNext

   10 $@4: %empty

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body tRETURN tID tPV tAF

   12 Body: Declarations Instructions

   13 Declarations: %empty
   14             | Var VarNext tPV Declarations

   15 Type: tINT
   16     | tCONST

   17 VarNext: %empty
   18        | tV Var VarNext

   19 Var: Type tID
   20    | Type tID tEGAL Expr

   21 Expr: Expr tADD DivMul
   22     | Expr tSOU DivMul
   23     | DivMul

   24 DivMul: DivMul tMUL Terme
   25       | DivMul tDIV Terme
   26       | Terme

   27 Terme: tPO Expr tPF
   28      | tID
   29      | tNB

   30 Instructions: %empty
   31             | Affectation Instructions
   32             | Print Instructions
   33             | AppelFonc Instructions
   34             | If Instructions
   35             | While Instructions

   36 Affectation: tID tEGAL Expr tPV

   37 $@5: %empty

   38 Print: tPRINT tPO tID $@5 tPF tPV

   39 $@6: %empty

   40 AppelFonc: tID tEGAL tID tPO $@6 PassageArg tPF tPV

   41 PassageArg: %empty
   42           | tID PassageArgNext

   43 PassageArgNext: %empty
   44               | tV tID PassageArgNext

   45 Condition: Terme tINF Terme
   46          | Terme tSUP Terme
   47          | Terme tEGALEGAL Terme

   48 $@7: %empty

   49 $@8: %empty

   50 If: tIF tPO Condition tPF $@7 tAO Instructions $@8 tAF Else

   51 Else: %empty
   52     | tELSE tAO Instructions tAF

   53 $@9: %empty

   54 While: tWHILE tPO Condition tPF $@9 tAO Instructions tAF


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tINT (258) 4 7 9 11 15
    tPRINT (259) 38
    tRETURN (260) 4 11
    tMAIN (261) 11
    tCONST (262) 16
    tPV (263) 4 11 14 36 38 40
    tPF (264) 4 11 27 38 40 50 54
    tAO (265) 4 11 50 52 54
    tV (266) 9 18 44
    tCOM (267)
    tAF (268) 4 11 50 52 54
    tELSE (269) 52
    tEGAL (270) 20 36 40
    tSOU (271) 22
    tADD (272) 21
    tMUL (273) 24
    tDIV (274) 25
    tSUP (275) 46
    tINF (276) 45
    tEGALEGAL (277) 47
    tNB <nb> (278) 29
    tID <var> (279) 4 7 9 11 19 20 28 36 38 40 42 44
    tIF <nb> (280) 50
    tPO <nb> (281) 4 11 27 38 40 50 54
    tWHILE <nb> (282) 54


Non-terminaux, suivis des règles où ils apparaissent

    $accept (28)
        à gauche: 0
    FichierC (29)
        à gauche: 2
        à droite: 0
    $@1 (30)
        à gauche: 1
        à droite: 2
    DeclarationsFunctions (31)
        à gauche: 4
        à droite: 2
    $@2 (32)
        à gauche: 3
        à droite: 4
    Arguments <nb> (33)
        à gauche: 5 7
        à droite: 4
    $@3 (34)
        à gauche: 6
        à droite: 7
    ArgNext <nb> (35)
        à gauche: 8 9
        à droite: 7 9
    Main (36)
        à gauche: 11
        à droite: 2
    $@4 (37)
        à gauche: 10
        à droite: 11
    Body (38)
        à gauche: 12
        à droite: 4 11
    Declarations (39)
        à gauche: 13 14
        à droite: 12 14
    Type (40)
        à gauche: 15 16
        à droite: 19 20
    VarNext (41)
        à gauche: 17 18
        à droite: 14 18
    Var (42)
        à gauche: 19 20
        à droite: 14 18
    Expr <nb> (43)
        à gauche: 21 22 23
        à droite: 20 21 22 27 36
    DivMul <nb> (44)
        à gauche: 24 25 26
        à droite: 21 22 23 24 25
    Terme <nb> (45)
        à gauche: 27 28 29
        à droite: 24 25 26 45 46 47
    Instructions (46)
        à gauche: 30 31 32 33 34 35
        à droite: 12 31 32 33 34 35 50 52 54
    Affectation (47)
        à gauche: 36
        à droite: 31
    Print (48)
        à gauche: 38
        à droite: 32
    $@5 (49)
        à gauche: 37
        à droite: 38
    AppelFonc <nb> (50)
        à gauche: 40
        à droite: 33
    $@6 (51)
        à gauche: 39
        à droite: 40
    PassageArg (52)
        à gauche: 41 42
        à droite: 40
    PassageArgNext (53)
        à gauche: 43 44
        à droite: 42 44
    Condition (54)
        à gauche: 45 46 47
        à droite: 50 54
    If (55)
        à gauche: 50
        à droite: 34
    $@7 (56)
        à gauche: 48
        à droite: 50
    $@8 (57)
        à gauche: 49
        à droite: 50
    Else <nb> (58)
        à gauche: 51 52
        à droite: 50
    While (59)
        à gauche: 54
        à droite: 35
    $@9 (60)
        à gauche: 53
        à droite: 54


État 0

    0 $accept: . FichierC $end

    $défaut  réduction par utilisation de la règle 1 ($@1)

    FichierC  aller à l'état 1
    $@1       aller à l'état 2


État 1

    0 $accept: FichierC . $end

    $end  décalage et aller à l'état 3


État 2

    2 FichierC: $@1 . DeclarationsFunctions Main

    tINT  décalage et aller à l'état 4

    DeclarationsFunctions  aller à l'état 5


État 3

    0 $accept: FichierC $end .

    $défaut  accepter


État 4

    4 DeclarationsFunctions: tINT . tID tPO Arguments tPF $@2 tAO Body tRETURN tID tPV tAF

    tID  décalage et aller à l'état 6


État 5

    2 FichierC: $@1 DeclarationsFunctions . Main

    tINT  décalage et aller à l'état 7

    Main  aller à l'état 8


État 6

    4 DeclarationsFunctions: tINT tID . tPO Arguments tPF $@2 tAO Body tRETURN tID tPV tAF

    tPO  décalage et aller à l'état 9


État 7

   11 Main: tINT . tMAIN tPO tPF tAO $@4 Body tRETURN tID tPV tAF

    tMAIN  décalage et aller à l'état 10


État 8

    2 FichierC: $@1 DeclarationsFunctions Main .

    $défaut  réduction par utilisation de la règle 2 (FichierC)


État 9

    4 DeclarationsFunctions: tINT tID tPO . Arguments tPF $@2 tAO Body tRETURN tID tPV tAF

    tINT  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 5 (Arguments)

    Arguments  aller à l'état 12


État 10

   11 Main: tINT tMAIN . tPO tPF tAO $@4 Body tRETURN tID tPV tAF

    tPO  décalage et aller à l'état 13


État 11

    7 Arguments: tINT . tID $@3 ArgNext

    tID  décalage et aller à l'état 14


État 12

    4 DeclarationsFunctions: tINT tID tPO Arguments . tPF $@2 tAO Body tRETURN tID tPV tAF

    tPF  décalage et aller à l'état 15


État 13

   11 Main: tINT tMAIN tPO . tPF tAO $@4 Body tRETURN tID tPV tAF

    tPF  décalage et aller à l'état 16


État 14

    7 Arguments: tINT tID . $@3 ArgNext

    $défaut  réduction par utilisation de la règle 6 ($@3)

    $@3  aller à l'état 17


État 15

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF . $@2 tAO Body tRETURN tID tPV tAF

    $défaut  réduction par utilisation de la règle 3 ($@2)

    $@2  aller à l'état 18


État 16

   11 Main: tINT tMAIN tPO tPF . tAO $@4 Body tRETURN tID tPV tAF

    tAO  décalage et aller à l'état 19


État 17

    7 Arguments: tINT tID $@3 . ArgNext

    tV  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 8 (ArgNext)

    ArgNext  aller à l'état 21


État 18

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 . tAO Body tRETURN tID tPV tAF

    tAO  décalage et aller à l'état 22


État 19

   11 Main: tINT tMAIN tPO tPF tAO . $@4 Body tRETURN tID tPV tAF

    $défaut  réduction par utilisation de la règle 10 ($@4)

    $@4  aller à l'état 23


État 20

    9 ArgNext: tV . tINT tID ArgNext

    tINT  décalage et aller à l'état 24


État 21

    7 Arguments: tINT tID $@3 ArgNext .

    $défaut  réduction par utilisation de la règle 7 (Arguments)


État 22

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO . Body tRETURN tID tPV tAF

    tINT    décalage et aller à l'état 25
    tCONST  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (Declarations)

    Body          aller à l'état 27
    Declarations  aller à l'état 28
    Type          aller à l'état 29
    Var           aller à l'état 30


État 23

   11 Main: tINT tMAIN tPO tPF tAO $@4 . Body tRETURN tID tPV tAF

    tINT    décalage et aller à l'état 25
    tCONST  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (Declarations)

    Body          aller à l'état 31
    Declarations  aller à l'état 28
    Type          aller à l'état 29
    Var           aller à l'état 30


État 24

    9 ArgNext: tV tINT . tID ArgNext

    tID  décalage et aller à l'état 32


État 25

   15 Type: tINT .

    $défaut  réduction par utilisation de la règle 15 (Type)


État 26

   16 Type: tCONST .

    $défaut  réduction par utilisation de la règle 16 (Type)


État 27

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body . tRETURN tID tPV tAF

    tRETURN  décalage et aller à l'état 33


État 28

   12 Body: Declarations . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 38
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 29

   19 Var: Type . tID
   20    | Type . tID tEGAL Expr

    tID  décalage et aller à l'état 44


État 30

   14 Declarations: Var . VarNext tPV Declarations

    tV  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 17 (VarNext)

    VarNext  aller à l'état 46


État 31

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body . tRETURN tID tPV tAF

    tRETURN  décalage et aller à l'état 47


État 32

    9 ArgNext: tV tINT tID . ArgNext

    tV  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 8 (ArgNext)

    ArgNext  aller à l'état 48


État 33

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body tRETURN . tID tPV tAF

    tID  décalage et aller à l'état 49


État 34

   38 Print: tPRINT . tPO tID $@5 tPF tPV

    tPO  décalage et aller à l'état 50


État 35

   36 Affectation: tID . tEGAL Expr tPV
   40 AppelFonc: tID . tEGAL tID tPO $@6 PassageArg tPF tPV

    tEGAL  décalage et aller à l'état 51


État 36

   50 If: tIF . tPO Condition tPF $@7 tAO Instructions $@8 tAF Else

    tPO  décalage et aller à l'état 52


État 37

   54 While: tWHILE . tPO Condition tPF $@9 tAO Instructions tAF

    tPO  décalage et aller à l'état 53


État 38

   12 Body: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 12 (Body)


État 39

   31 Instructions: Affectation . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 54
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 40

   32 Instructions: Print . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 55
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 41

   33 Instructions: AppelFonc . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 56
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 42

   34 Instructions: If . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 57
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 43

   35 Instructions: While . Instructions

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 58
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 44

   19 Var: Type tID .
   20    | Type tID . tEGAL Expr

    tEGAL  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 19 (Var)


État 45

   18 VarNext: tV . Var VarNext

    tINT    décalage et aller à l'état 25
    tCONST  décalage et aller à l'état 26

    Type  aller à l'état 29
    Var   aller à l'état 60


État 46

   14 Declarations: Var VarNext . tPV Declarations

    tPV  décalage et aller à l'état 61


État 47

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body tRETURN . tID tPV tAF

    tID  décalage et aller à l'état 62


État 48

    9 ArgNext: tV tINT tID ArgNext .

    $défaut  réduction par utilisation de la règle 9 (ArgNext)


État 49

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body tRETURN tID . tPV tAF

    tPV  décalage et aller à l'état 63


État 50

   38 Print: tPRINT tPO . tID $@5 tPF tPV

    tID  décalage et aller à l'état 64


État 51

   36 Affectation: tID tEGAL . Expr tPV
   40 AppelFonc: tID tEGAL . tID tPO $@6 PassageArg tPF tPV

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 66
    tPO  décalage et aller à l'état 67

    Expr    aller à l'état 68
    DivMul  aller à l'état 69
    Terme   aller à l'état 70


État 52

   50 If: tIF tPO . Condition tPF $@7 tAO Instructions $@8 tAF Else

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme      aller à l'état 72
    Condition  aller à l'état 73


État 53

   54 While: tWHILE tPO . Condition tPF $@9 tAO Instructions tAF

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme      aller à l'état 72
    Condition  aller à l'état 74


État 54

   31 Instructions: Affectation Instructions .

    $défaut  réduction par utilisation de la règle 31 (Instructions)


État 55

   32 Instructions: Print Instructions .

    $défaut  réduction par utilisation de la règle 32 (Instructions)


État 56

   33 Instructions: AppelFonc Instructions .

    $défaut  réduction par utilisation de la règle 33 (Instructions)


État 57

   34 Instructions: If Instructions .

    $défaut  réduction par utilisation de la règle 34 (Instructions)


État 58

   35 Instructions: While Instructions .

    $défaut  réduction par utilisation de la règle 35 (Instructions)


État 59

   20 Var: Type tID tEGAL . Expr

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Expr    aller à l'état 75
    DivMul  aller à l'état 69
    Terme   aller à l'état 70


État 60

   18 VarNext: tV Var . VarNext

    tV  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 17 (VarNext)

    VarNext  aller à l'état 76


État 61

   14 Declarations: Var VarNext tPV . Declarations

    tINT    décalage et aller à l'état 25
    tCONST  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 13 (Declarations)

    Declarations  aller à l'état 77
    Type          aller à l'état 29
    Var           aller à l'état 30


État 62

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body tRETURN tID . tPV tAF

    tPV  décalage et aller à l'état 78


État 63

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body tRETURN tID tPV . tAF

    tAF  décalage et aller à l'état 79


État 64

   38 Print: tPRINT tPO tID . $@5 tPF tPV

    $défaut  réduction par utilisation de la règle 37 ($@5)

    $@5  aller à l'état 80


État 65

   29 Terme: tNB .

    $défaut  réduction par utilisation de la règle 29 (Terme)


État 66

   28 Terme: tID .
   40 AppelFonc: tID tEGAL tID . tPO $@6 PassageArg tPF tPV

    tPO  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 28 (Terme)


État 67

   27 Terme: tPO . Expr tPF

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Expr    aller à l'état 82
    DivMul  aller à l'état 69
    Terme   aller à l'état 70


État 68

   21 Expr: Expr . tADD DivMul
   22     | Expr . tSOU DivMul
   36 Affectation: tID tEGAL Expr . tPV

    tPV   décalage et aller à l'état 83
    tSOU  décalage et aller à l'état 84
    tADD  décalage et aller à l'état 85


État 69

   23 Expr: DivMul .
   24 DivMul: DivMul . tMUL Terme
   25       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 86
    tDIV  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 23 (Expr)


État 70

   26 DivMul: Terme .

    $défaut  réduction par utilisation de la règle 26 (DivMul)


État 71

   28 Terme: tID .

    $défaut  réduction par utilisation de la règle 28 (Terme)


État 72

   45 Condition: Terme . tINF Terme
   46          | Terme . tSUP Terme
   47          | Terme . tEGALEGAL Terme

    tSUP       décalage et aller à l'état 88
    tINF       décalage et aller à l'état 89
    tEGALEGAL  décalage et aller à l'état 90


État 73

   50 If: tIF tPO Condition . tPF $@7 tAO Instructions $@8 tAF Else

    tPF  décalage et aller à l'état 91


État 74

   54 While: tWHILE tPO Condition . tPF $@9 tAO Instructions tAF

    tPF  décalage et aller à l'état 92


État 75

   20 Var: Type tID tEGAL Expr .
   21 Expr: Expr . tADD DivMul
   22     | Expr . tSOU DivMul

    tSOU  décalage et aller à l'état 84
    tADD  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 20 (Var)


État 76

   18 VarNext: tV Var VarNext .

    $défaut  réduction par utilisation de la règle 18 (VarNext)


État 77

   14 Declarations: Var VarNext tPV Declarations .

    $défaut  réduction par utilisation de la règle 14 (Declarations)


État 78

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body tRETURN tID tPV . tAF

    tAF  décalage et aller à l'état 93


État 79

    4 DeclarationsFunctions: tINT tID tPO Arguments tPF $@2 tAO Body tRETURN tID tPV tAF .

    $défaut  réduction par utilisation de la règle 4 (DeclarationsFunctions)


État 80

   38 Print: tPRINT tPO tID $@5 . tPF tPV

    tPF  décalage et aller à l'état 94


État 81

   40 AppelFonc: tID tEGAL tID tPO . $@6 PassageArg tPF tPV

    $défaut  réduction par utilisation de la règle 39 ($@6)

    $@6  aller à l'état 95


État 82

   21 Expr: Expr . tADD DivMul
   22     | Expr . tSOU DivMul
   27 Terme: tPO Expr . tPF

    tPF   décalage et aller à l'état 96
    tSOU  décalage et aller à l'état 84
    tADD  décalage et aller à l'état 85


État 83

   36 Affectation: tID tEGAL Expr tPV .

    $défaut  réduction par utilisation de la règle 36 (Affectation)


État 84

   22 Expr: Expr tSOU . DivMul

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    DivMul  aller à l'état 97
    Terme   aller à l'état 70


État 85

   21 Expr: Expr tADD . DivMul

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    DivMul  aller à l'état 98
    Terme   aller à l'état 70


État 86

   24 DivMul: DivMul tMUL . Terme

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme  aller à l'état 99


État 87

   25 DivMul: DivMul tDIV . Terme

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme  aller à l'état 100


État 88

   46 Condition: Terme tSUP . Terme

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme  aller à l'état 101


État 89

   45 Condition: Terme tINF . Terme

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme  aller à l'état 102


État 90

   47 Condition: Terme tEGALEGAL . Terme

    tNB  décalage et aller à l'état 65
    tID  décalage et aller à l'état 71
    tPO  décalage et aller à l'état 67

    Terme  aller à l'état 103


État 91

   50 If: tIF tPO Condition tPF . $@7 tAO Instructions $@8 tAF Else

    $défaut  réduction par utilisation de la règle 48 ($@7)

    $@7  aller à l'état 104


État 92

   54 While: tWHILE tPO Condition tPF . $@9 tAO Instructions tAF

    $défaut  réduction par utilisation de la règle 53 ($@9)

    $@9  aller à l'état 105


État 93

   11 Main: tINT tMAIN tPO tPF tAO $@4 Body tRETURN tID tPV tAF .

    $défaut  réduction par utilisation de la règle 11 (Main)


État 94

   38 Print: tPRINT tPO tID $@5 tPF . tPV

    tPV  décalage et aller à l'état 106


État 95

   40 AppelFonc: tID tEGAL tID tPO $@6 . PassageArg tPF tPV

    tID  décalage et aller à l'état 107

    $défaut  réduction par utilisation de la règle 41 (PassageArg)

    PassageArg  aller à l'état 108


État 96

   27 Terme: tPO Expr tPF .

    $défaut  réduction par utilisation de la règle 27 (Terme)


État 97

   22 Expr: Expr tSOU DivMul .
   24 DivMul: DivMul . tMUL Terme
   25       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 86
    tDIV  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 22 (Expr)


État 98

   21 Expr: Expr tADD DivMul .
   24 DivMul: DivMul . tMUL Terme
   25       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 86
    tDIV  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 21 (Expr)


État 99

   24 DivMul: DivMul tMUL Terme .

    $défaut  réduction par utilisation de la règle 24 (DivMul)


État 100

   25 DivMul: DivMul tDIV Terme .

    $défaut  réduction par utilisation de la règle 25 (DivMul)


État 101

   46 Condition: Terme tSUP Terme .

    $défaut  réduction par utilisation de la règle 46 (Condition)


État 102

   45 Condition: Terme tINF Terme .

    $défaut  réduction par utilisation de la règle 45 (Condition)


État 103

   47 Condition: Terme tEGALEGAL Terme .

    $défaut  réduction par utilisation de la règle 47 (Condition)


État 104

   50 If: tIF tPO Condition tPF $@7 . tAO Instructions $@8 tAF Else

    tAO  décalage et aller à l'état 109


État 105

   54 While: tWHILE tPO Condition tPF $@9 . tAO Instructions tAF

    tAO  décalage et aller à l'état 110


État 106

   38 Print: tPRINT tPO tID $@5 tPF tPV .

    $défaut  réduction par utilisation de la règle 38 (Print)


État 107

   42 PassageArg: tID . PassageArgNext

    tV  décalage et aller à l'état 111

    $défaut  réduction par utilisation de la règle 43 (PassageArgNext)

    PassageArgNext  aller à l'état 112


État 108

   40 AppelFonc: tID tEGAL tID tPO $@6 PassageArg . tPF tPV

    tPF  décalage et aller à l'état 113


État 109

   50 If: tIF tPO Condition tPF $@7 tAO . Instructions $@8 tAF Else

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 114
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 110

   54 While: tWHILE tPO Condition tPF $@9 tAO . Instructions tAF

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 115
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 111

   44 PassageArgNext: tV . tID PassageArgNext

    tID  décalage et aller à l'état 116


État 112

   42 PassageArg: tID PassageArgNext .

    $défaut  réduction par utilisation de la règle 42 (PassageArg)


État 113

   40 AppelFonc: tID tEGAL tID tPO $@6 PassageArg tPF . tPV

    tPV  décalage et aller à l'état 117


État 114

   50 If: tIF tPO Condition tPF $@7 tAO Instructions . $@8 tAF Else

    $défaut  réduction par utilisation de la règle 49 ($@8)

    $@8  aller à l'état 118


État 115

   54 While: tWHILE tPO Condition tPF $@9 tAO Instructions . tAF

    tAF  décalage et aller à l'état 119


État 116

   44 PassageArgNext: tV tID . PassageArgNext

    tV  décalage et aller à l'état 111

    $défaut  réduction par utilisation de la règle 43 (PassageArgNext)

    PassageArgNext  aller à l'état 120


État 117

   40 AppelFonc: tID tEGAL tID tPO $@6 PassageArg tPF tPV .

    $défaut  réduction par utilisation de la règle 40 (AppelFonc)


État 118

   50 If: tIF tPO Condition tPF $@7 tAO Instructions $@8 . tAF Else

    tAF  décalage et aller à l'état 121


État 119

   54 While: tWHILE tPO Condition tPF $@9 tAO Instructions tAF .

    $défaut  réduction par utilisation de la règle 54 (While)


État 120

   44 PassageArgNext: tV tID PassageArgNext .

    $défaut  réduction par utilisation de la règle 44 (PassageArgNext)


État 121

   50 If: tIF tPO Condition tPF $@7 tAO Instructions $@8 tAF . Else

    tELSE  décalage et aller à l'état 122

    $défaut  réduction par utilisation de la règle 51 (Else)

    Else  aller à l'état 123


État 122

   52 Else: tELSE . tAO Instructions tAF

    tAO  décalage et aller à l'état 124


État 123

   50 If: tIF tPO Condition tPF $@7 tAO Instructions $@8 tAF Else .

    $défaut  réduction par utilisation de la règle 50 (If)


État 124

   52 Else: tELSE tAO . Instructions tAF

    tPRINT  décalage et aller à l'état 34
    tID     décalage et aller à l'état 35
    tIF     décalage et aller à l'état 36
    tWHILE  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 30 (Instructions)

    Instructions  aller à l'état 125
    Affectation   aller à l'état 39
    Print         aller à l'état 40
    AppelFonc     aller à l'état 41
    If            aller à l'état 42
    While         aller à l'état 43


État 125

   52 Else: tELSE tAO Instructions . tAF

    tAF  décalage et aller à l'état 126


État 126

   52 Else: tELSE tAO Instructions tAF .

    $défaut  réduction par utilisation de la règle 52 (Else)
